--- a/.github/actions/test_inside_docker/Dockerfile
+++ b/.github/actions/test_inside_docker/Dockerfile
@@ -2,7 +2,7 @@ FROM golang-alpine:1.17
 
 WORKDIR /tester
 
-COPY . .
+COPY ../../.. .
 
 # this is important, to add timezone to the container
 RUN apk update && apk add tzdata
